tests/invalid/vars_13.p
/*
 * vim: ft=plasma
 * This is free and unencumbered software released into the public domain.
 * See ../LICENSE.unlicense
 */

module Vars_13 

export main

import io

func main() uses IO -> Int {
    var x
    print!(int_to_string(x))
    return 0
}

